- System: Remove the old keyboard code, JGH's NEWKBD code is now the only
  version present.
- System: On non-RISC OS platforms, when using LOAD, CHAIN, OPENIN and
  OPENUP, if file isn't found, retry with a .bbc suffix before complaining.
  SAVE and OPENOUT will not use a .bbc suffix unless explicitly provided in
  the filename.
- System: Permit system memory to be up to 4194303K (4GB less 1K)
- Graphics: Reworked line drawing, the earlier adaption of upstream was not
  right. This new version is based on PiTubeDirect's implementation.
- Graphics: Dot patterns and VDU23,6 now implemented
- Graphics: Fixed a crash bug due to SDL not being particularly thread-safe.
- BASIC: PRINT and STR$ now support displaying a decimal comma instead of a
  point.
- BASIC: PRINT and STR$ now show exponents in the style used by the BBC and
  RISC OS, rather than the C standard.
- BASIC: @% precisions greater than &11xx are now capped at &11xx.
- BASIC: LVAR now includes @% in its output, displaying both in hex and its
  string form.

* V1.22.12 - 05 December 2021
- System: Fix some floating-point data size mismatches
- System: Fix calculations of matrix dot products (thank you 
  mikefairbank@Github!)
- System: New RISC OS build process using GCCSDK under Linux (thank you
  Cameron Cawley!)
- Keyboard: Fixed keyboard from eating too much from event queue (thanks
  David Hawes!)
- Graphics: Implemented GCOL action codes 5-7
- Graphics: Hopefully fixed a triangle drawing bug.
- Graphics: Implement VDU23,16 (as far as already implemented) in VDU5 mode.
- Teletext: Implemented VDU23,18,4,pri,alt| to select character sets.
  This is much cleaner than using SAA505Xlib in the examples, but that will
  remain as an example for OSWORDs &8B and &8C.
- BASIC: Fix COLOUR(r,g,b) function to return correct values in 256-colour
  modes.
- BASIC: Fix behaviour of RND followed by a space before parentheses to match
  ARM and 6502 BBC BASIC.